# xiaogpt

./: .gitignore  .pdm.toml  ChatGPT-MiSpeaker.py  Dockerfile  README.md  config.json.example  one_click.bat  pyproject.toml  requirements.txt  restart_docker.sh  setup.py  xiao_config.json.example  xiao_config.yaml.example  xiaogpt.py  xiaogptconfig.json  一键运行.bat
.github/workflows/: CI.yaml  release.yaml
xiaogpt/: cli.py  config.py  utils.py  xiaogpt.py
xiaogpt/bot/: __init__.py  bard_bot.py  base_bot.py  chatgpt_bot.py  chatgptapi_bot.py  doubao_bot.py  edgegpt_bot.py  gemini_bot.py  glm_bot.py  gpt3_bot.py  jiekou_bot.py  langchain_bot.py  llama_bot.py  moonshot_bot.py  newbing_bot.py  ppio_bot.py  qwen_bot.py  yi_bot.py
xiaogpt/langchain/: callbacks.py  chain.py  mail_box.py  mail_summary_tools.py  stream_call_back.py
xiaogpt/langchain/examples/email/: mail_box.py  mail_summary_tools.py
xiaogpt/tts/: __init__.py  azure.py  base.py  edge.py  file.py  live.py  mi.py  openai.py  tetos.py  volc.py
