[project]
name = "xiaogpt"
description = "Play ChatGPT or other LLM with xiaomi AI speaker"
readme = "README.md"
authors = [
    {name = "yihong0618", email = "zouzou0208@gmail.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    "miservice_fork",
    "openai>=1",
    "aiohttp",
    "rich",
    "zhipuai>=2.0.1",
    "httpx[socks]",
    "edge-tts>=6.1.3",
    "EdgeGPT==0.1.26",
    "langchain>=0.0.343",
    "beautifulsoup4>=4.12.0",
    "google-search-results>=2.4.2",
    "google-generativeai",
    "numexpr>=2.8.6",
    "dashscope>=1.10.0",
    "azure-cognitiveservices-speech>=1.37.0",
    "multidict>=6.0.5",
    "volcengine>=1.0.136",
]
license = {text = "MIT"}
dynamic = ["version", "optional-dependencies"]

[project.urls]
Homepage = "https://github.com/yihong0618/xiaogpt"

[project.scripts]
xiaogpt = "xiaogpt.cli:main"

[tool.pdm]
plugins = ["pdm-autoexport"]

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
includes = ["xiaogpt/"]
locked = true

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = true

[build-system]
requires = ["pdm-backend>=2.0.0", "pdm-build-locked"]
build-backend = "pdm.backend"
