[project]
name = "xiaogpt"
description = "Play ChatGPT or other LLM with xiaomi AI speaker"
readme = "README.md"
authors = [
    {name = "yihong0618", email = "zouzou0208@gmail.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "miservice_fork",
    "openai>=1",
    "aiohttp",
    "rich",
    "zhipuai>=2.0.1",
    "httpx[socks]",
    "langchain>=0.0.343",
    "beautifulsoup4>=4.12.0",
    "google-search-results>=2.4.2",
    "google-generativeai",
    "numexpr>=2.8.6",
    "dashscope>=1.10.0",
    "tetos>=0.2.1",
    "groq>=0.5.0",
    "pyyaml>=6.0.1",
    "langchain-community>=0.0.38",
    # lingua doesn't ship wheels for python 3.13 nor sdist
    "lingua-language-detector>=2.0.2; python_version < \"3.13\"",
    "volcengine-python-sdk>=1.1.5",
]
license = {text = "MIT"}
dynamic = ["version", "optional-dependencies"]

[project.urls]
Homepage = "https://github.com/yihong0618/xiaogpt"

[project.scripts]
xiaogpt = "xiaogpt.cli:main"

[tool.pdm]
plugins = ["pdm-autoexport"]
dev-dependencies = {dev = ["black"]}

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
includes = ["xiaogpt/"]
locked = true

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = true

[build-system]
requires = ["pdm-backend>=2.0.0", "pdm-build-locked"]
build-backend = "pdm.backend"
